# OSDev-Clion

./: .gitignore  CMakeLists.txt  README.md  boot.s  generate-iso.sh  kernel.cpp  st.sh
